// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-iAyFgw NyZQn"
  >
    <table
      className="sc-hSdWYo iocPEq"
    >
      <tbody
        className="sc-cvbbAY dbHDoR"
      >
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            US
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            PL
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Warsaw
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            DE
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Berlin
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            FR
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Paris
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            ES
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Madird
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            —
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-iAyFgw NyZQn"
  >
    <table
      className="sc-hSdWYo iocPEq"
    >
      <thead
        className="sc-eHgmQL gmKbQu"
      >
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <th
            className="sc-cMljjf eTLFVm"
          >
            Code
          </th>
          <th
            className="sc-cMljjf eTLFVm"
          >
            Capital
          </th>
          <th
            className="sc-cMljjf eTLFVm"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-cvbbAY dbHDoR"
      >
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            US
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            PL
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Warsaw
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            DE
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Berlin
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            FR
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Paris
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            ES
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Madird
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-brqgnP dQUBSQ"
          >
            —
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-iAyFgw NyZQn"
  >
    <table
      className="sc-hSdWYo iocPEq"
    >
      <thead
        className="sc-eHgmQL gmKbQu"
      >
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <th
            className="sc-cMljjf eTLFVm"
          >
            #
          </th>
          <th
            className="sc-cMljjf eTLFVm"
          >
            Code
          </th>
          <th
            className="sc-cMljjf eTLFVm"
          >
            Capital
          </th>
          <th
            className="sc-cMljjf eTLFVm"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-cvbbAY dbHDoR"
      >
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-jAaTju ecIMhf"
          >
            1
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            US
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-jAaTju ecIMhf"
          >
            2
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            PL
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Warsaw
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-jAaTju ecIMhf"
          >
            3
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            DE
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Berlin
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-jAaTju ecIMhf"
          >
            4
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            FR
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Paris
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-jAaTju ecIMhf"
          >
            5
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            ES
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Madird
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jWBwVP hfgytH"
        >
          <td
            className="sc-jAaTju ecIMhf"
          >
            6
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            —
          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-brqgnP dQUBSQ"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
